tests/paczka1/fuzzy1/78652361.err
Error in line 1: E8cDUDCQz S827 51,0
Error in line 8: A742 S57 18,1
Error in line 12: A742 A962 0,5
Error in line 29: CwPWMNt A742 89,3
Error in line 27: 9t0ghi3i9 A742 41,3
Error in line 31: 9t0ghi3i9 S827 92,1
Error in line 38: FChmAeVt A962 49,7
